--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "description": "Image Gallery Tool with source field for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/VolgaIgor/editorjs-gallery",
+  "repository": "https://github.com/adampatterson/editorjs-media",
   "main": "./dist/bundle.js",
   "scripts": {
     "build": "webpack --mode production",
@@ -21,7 +21,7 @@
     "lint:fix": "eslint src/ --ext .js --fix"
   },
   "author": {
-    "name": "Igor Shuvalov «VolgaIgor» & CodeX"
+    "name": "Adam Patterson"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
