--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@adampatterson/editorjs-media",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": "true",
   "keywords": [
     "codex editor",
@@ -13,6 +13,8 @@
   "files": [
     "dist"
   ],
+  "main": "./dist/bundle.umd.js",
+  "module": "./dist/bundle.mjs",
   "exports": {
     ".": {
       "import": "./dist/bundle.mjs",
@@ -22,7 +24,6 @@
   "description": "Image Gallery Tool with source field for Editor.js",
   "license": "MIT",
   "repository": "https://github.com/adampatterson/editorjs-media",
-  "main": "./dist/bundle.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
