Switched to vite, media only supports Gallery for now

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/bundle.umd.js",
-  "module": "./dist/bundle.mjs",
+  "main": "dist/bundle.umd.js",
+  "module": "dist/bundle.mjs",
   "exports": {
     ".": {
       "import": "./dist/bundle.mjs",
@@ -47,8 +47,7 @@
     "postcss-nested-ancestors": "^2.0.0",
     "request": "^2.88.0",
     "vite": "^4.5.0",
-    "vite-plugin-css-injected-by-js": "^3.3.0",
-    "svg-inline-loader": "^0.8.0"
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   },
   "dependencies": {
     "sortablejs": "^1.15.0"
